deploy: 5c194c6f02159c999c87da70cce37ed6f5388331

--- a/accessibility/index.html
+++ b/accessibility/index.html
@@ -1,22 +1,22 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-03-07 13:37 -->
+    <!-- Built with 11ty - 2024-03-07 13:48 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
     
     <meta property="og:image" content="https://bcc.kdl.kcl.ac.uk/assets/img/logos/KCL-square.svg">
     <meta property="og:description" content="">
-    <meta property="og:title" content="Accessibility Statement for BCC: Brightening the Covenant Chain">
+    <meta property="og:title" content="Accessibility Statement for Brightening the Covenant Chain">
 
 
-    <title>Accessibility Statement for BCC: Brightening the Covenant Chain | BCC - Treatied Spaces</title>
+    <title>Accessibility Statement for Brightening the Covenant Chain | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1709818620">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1709819316">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1709818620"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1709819316"></script>
     
     <style>
     .map-label {
@@ -81,7 +81,7 @@
 </header>
 
 
-    <p>This statement applies to the BCC: Brightening the Covenant Chain (https://bcc-dev.kdl.kcl.ac.uk/).</p>
+    <p>This statement applies to the Brightening the Covenant Chain site (https://bcc-dev.kdl.kcl.ac.uk/).</p>
 <p>This website is run by <a href="https://kdl.kcl.ac.uk">King's Digital Lab, King's College London (KDL)</a>. We want as many people as possible to be able to use this website. For example, that means you should be able to:</p>
 <ul>
 <li>zoom in up to 200% without the text spilling off the screen</li>
@@ -91,7 +91,7 @@
 <p>We’ve also made the website text as simple as possible to understand.</p>
 <p><a href="https://mcmw.abilitynet.org.uk/">AbilityNet</a> has advice on making your device easier to use if you have a disability.</p>
 <h2><a id="how"></a>How accessible this website is</h2>
-<p>We know some part of this website are not fully accessible. The issues detailed below apply to the Map Story page, except for the menu issue, which is relevant to the entire website.</p>
+<p>We know some parts of this website are not fully accessible. The issues detailed below apply to the page with the map application, except for the menu issue, which is relevant to the entire website.</p>
 <ul>
 <li>
 <p>Keyboard</p>
@@ -131,7 +131,7 @@
 <p>Some map polygons, particularly green circles, are not clearly visible and do not stand out well against the map background. This concern is part of our ongoing design optimization, we aim to improve map visibility and contrast;</p>
 </li>
 <li>
-<p>The text selection is currently disabled on Map Story, limiting how users interact with content. We're exploring solutions like offering alternative formats, such as downloadable PDF, for easier access;</p>
+<p>The text selection is currently disabled in the map application, limiting how users interact with content. We're exploring solutions like offering alternative formats, such as downloadable PDF, for easier access;</p>
 </li>
 <li>
 <p>The map tooltips remain clickable and appear behind the text layer, which might confuse users. We're working on better management of the text and map layers to ensure clear functionality and content visibility;
@@ -151,11 +151,11 @@ In particular we plan to fix the images issue later in 2024.</p>
 <p>We used this approach to decide on a sample of pages to test:</p>
 <ul>
 <li>The <a href="/">Homepage</a></li>
-<li>The <a href="/stories/">Map Story</a> page</li>
+<li>The <a href="/stories/">map application</a> page</li>
 <li>The <a href="/accessibility/">Accessibility Statement</a> page</li>
 </ul>
-<p>Note: At the time of testing (14 February 2024) some static pages were not available (About, Team, Recourses, Credits &amp; Acknowledgements)</p>
-<p>This page is based on the <a href="https://www.gov.uk/government/publications/sample-accessibility-statement/sample-accessibility-statement-for-a-fictional-public-sector-website">sample template</a> provided by gov.uk.</p>
+<p>Note: At the time of testing (14 February 2024) some of the proposed static pages (About, Team, Recourses, Credits &amp; Acknowledgements) were not available
+This page is based on the <a href="https://www.gov.uk/government/publications/sample-accessibility-statement/sample-accessibility-statement-for-a-fictional-public-sector-website">sample template</a> provided by gov.uk.</p>
 
     <footer class="footer">
   <div class="has-text-centered">
