--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-03-19 13:03 -->
+    <!-- Built with 11ty - 2024-03-21 12:59 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1710853418">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1711025989">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1710853418"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1711025989"></script>
     
     <style>
     .map-label {
@@ -122,17 +122,13 @@
         <article class="storyTitle">
             <h2>Overview</h2>
         </article>
-        <article class="mapSlide" id="slide_1" data-slideId="1"><p>Lorem ipsum dolor sit amet. Qui labore dolores qui dolores aperiam aut nihil tenetur qui cumque ipsa qui
-possimus neque et tenetur velit eos quisquam expedita. Et maxime voluptatum eum laudantium officiis eos
-nihil quae et sint inventore qui voluptatum consequatur? Sed consequuntur quia non accusamus
-perspiciatis qui deserunt porro.</p>
-<p>At dolor distinctio aut omnis beatae ut numquam omnis qui voluptatem iure. Sit minus similique eum
-internos modi a velit eaque et fugiat aliquid ut iste quia qui accusantium tempora in harum sunt. Non
-repellat consequatur qui nostrum excepturi et earum error. Qui obcaecati dolor in quae voluptas quo
-voluptas distinctio sit delectus assumenda non sint autem.</p>
-<p>Ut voluptatem quae qui reprehenderit rerum eos numquam saepe sit exercitationem animi sit repellat dicta.
-Ut error voluptatem qui eveniet quibusdam eos unde assumenda aut dolor accusantium est iure aliquam eos
-eligendi expedita aut minima voluptatem.</p>
+        <article class="mapSlide" id="slide_1" data-slideId="1"><p>For a long time, American history was the story of one nation and one Continent. From the Plymouth Colony to the Great Plains, history moved west where states appeared in spaces that were apparently empty. A story on this scale has relied on maps that show angular lines and borders, British colonies becoming American states. But those maps obscure the extent to which early colonists saw themselves as settled among nations.</p>
+<blockquote>
+<p>‘we live encompassed with people of several nations and strange language’.</p>
+<p><em>New England Confederation, 1643</em></p>
+<p>‘The territories of Britain, Spain and of the Indian nations in our neighbourhood, do not border on particular States; but encircle the Union from MAINE to GEORGIA’.</p>
+<p>Alexander Hamilton, <em>The Federalist</em>, no. 25. 21 December 1787.</p>
+</blockquote>
 </article>
 <div class="article_spacer">&nbsp;</div>
 
