--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-03-25 15:51 -->
+    <!-- Built with 11ty - 2024-03-25 18:29 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1711381914">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1711391392">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1711381914"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1711391392"></script>
     
     <style>
     .map-label {
@@ -337,7 +337,7 @@
     <div id="filter-wrapper">
         <input type="checkbox" id="filter">
         <label aria-label="filter list" class="filter-button" for="filter">
-          <h2>Filter top</h2>
+          <h2>Filter</h2>
         </label>
 
         <div class="content">
@@ -516,13 +516,12 @@
                         </li>
                 </ol>
             </section>
-                <div id="filter-button-bottom">
-                    <input type="checkbox" id="filter">
-                    <label aria-label="filter list" class="filter-button" for="filter">
+            </div>
+
+                    <label aria-label="filter list" class="filter-button-bottom" for="filter">
                     <h2> </h2>
                     </label>
-                </div>
-        </div>
+
     </div>
 
     <div id="legend-wrapper">
