--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-03-26 15:24 -->
+    <!-- Built with 11ty - 2024-03-26 15:35 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1711466695">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1711467318">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1711466695"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1711467318"></script>
     
     <style>
     .map-label {
@@ -341,7 +341,7 @@
         </label>
 
         <div class="content">
-            <p>Click on the individual features or maps to customise your view. Select or deselect all if needed.</p>
+            <p>Click maps to show features. Use feature list to choose features displayed. Select or deselect all if needed.</p>
 
             <section>
                 <header><h3>Maps <em><span id="totalMapFiltersApplied">0</span>/17 Selected</em></h3>
