deploy: aea34e350b5ed99ad29d29286de58d4dcb9c207e

--- a/stories/overview/index.html
+++ b/stories/overview/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-04-03 09:24 -->
+    <!-- Built with 11ty - 2024-04-03 12:45 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>BCC | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1712136285">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1712148355">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1712136285"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1712148355"></script>
     
     <style>
     .map-label {
@@ -81,13 +81,12 @@
 </header>
 
 
-    <article class="mapSlide" id="slide_1" data-slideId="1"><p>For a long time, American history was the story of one nation and one Continent. From the Plymouth Colony to the Great Plains, history moved west where states appeared in spaces that were apparently empty. A story on this scale has relied on maps that show angular lines and borders, British colonies becoming American states. But those maps obscure the extent to which early colonists saw themselves as settled among nations.</p>
-<blockquote>
-<p>‘we live encompassed with people of several nations and strange language’.</p>
-<p><em>New England Confederation, 1643</em></p>
+    <article class="mapSlide" id="slide_0" data-slideId="0"><p>For a long time, American history was the story of one nation and one Continent. From the Plymouth Colony to the Great Plains, history moved west where states appeared in spaces that were apparently empty. A story on this scale has relied on maps that show angular lines and borders, British colonies becoming American states. But those maps obscure the extent to which early colonists saw themselves as settled among nations.</p>
+</article>
+<div class="article_spacer">&nbsp;</div><article class="mapSlide" id="slide_1" data-slideId="1"><p>‘we live encompassed with people of several nations and strange language’.</p>
+<p><em>New England Confederation</em>, 1643</p>
 <p>‘The territories of Britain, Spain and of the Indian nations in our neighbourhood, do not border on particular States; but encircle the Union from MAINE to GEORGIA’.</p>
 <p>Alexander Hamilton, <em>The Federalist</em>, no. 25. 21 December 1787.</p>
-</blockquote>
 </article>
 <div class="article_spacer">&nbsp;</div>
     <footer class="footer">
