--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-04-12 11:24 -->
+    <!-- Built with 11ty - 2024-04-15 08:13 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>About the project | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1712921052">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1713168791">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1712921052"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1713168791"></script>
     
     <style>
     .map-label {
@@ -81,14 +81,13 @@
 </header>
 
 
-    <h2>About Our Research Project</h2>
-<p>In the process of creating this digital edition, we aim to answer three key questions:</p>
-<ol>
-<li>Lorem</li>
-<li>Ipsum</li>
-<li>Also, Ipsum</li>
-</ol>
+    <h2>The motivation for <em>Movement and Common Worlds: Homelands, Pathways and the Peoples of the Northeast</em></h2>
+<p>The idea for the project emerged as a response to how maps have handled the presence of Native Nations. The assumption is that colonialism established a frontier that moved from east to west, sweeping away Native nations and peoples as it went. Recent history has moved away from a story of colonialism and toward one in which an Indigenous Continent ‘slowly became colonial’. Maps are an effective way to see that story.</p>
+<p>To do that we need to look at maps produced by British surveyors in a different way. On one view, they show the development of colonies marked by names and encircled by borders. But as they sought to visualise a colonial world, map makers also depicted a Native world of villages, towns, nations, and confederations, sitting alongside colonial towns. If you look closely, you will see that each map-based depiction of a ‘colonial world’ is also a depiction of an Indigenous one. In this project, we sought to bring these worlds back together after two centuries of separation and misunderstanding.</p>
+<h2>How the kinetic map was made</h2>
+<p>We wanted to be able to show not only the 'strata' of information which accreted in maps of North America over time but also how those maps represented the juxtaposition of Native and colonial presence. No apposite database existed for this, so our major task was to build one. To do this we selected a range of historic maps that, to us, reflected our interest in the common worlds; these were geo-rectified over a base map and then data points were selected and recorded.</p>
 <h2>The Project Team</h2>
+<p>Charles Prior (project lead, author of map stories); Dr Matthias Wong (PDRA - data mining); Jenson Morse (Project Intern); King’s Digital Lab (Paul Caton, Neil Jakeman, Elliot Hall, Tiffany Ong, Lucie Hao); Project review held at RAI with input from panel: Max Edelson, Chad Anderson, Hayden Haynes (Seneca Nation), Saliha Belmessous, Cassie Wise, Miriam Davis Rosenbaum (National Indian Education Association).</p>
 
     <footer class="footer">
   <div class="has-text-centered">
