deploy: daddefe544af402ec14713fa3a0a260fea4af5ac

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-04-15 08:13 -->
+    <!-- Built with 11ty - 2024-04-16 20:57 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>About the project | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1713168791">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1713301039">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1713168791"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1713301039"></script>
     
     <style>
     .map-label {
@@ -85,7 +85,9 @@
 <p>The idea for the project emerged as a response to how maps have handled the presence of Native Nations. The assumption is that colonialism established a frontier that moved from east to west, sweeping away Native nations and peoples as it went. Recent history has moved away from a story of colonialism and toward one in which an Indigenous Continent ‘slowly became colonial’. Maps are an effective way to see that story.</p>
 <p>To do that we need to look at maps produced by British surveyors in a different way. On one view, they show the development of colonies marked by names and encircled by borders. But as they sought to visualise a colonial world, map makers also depicted a Native world of villages, towns, nations, and confederations, sitting alongside colonial towns. If you look closely, you will see that each map-based depiction of a ‘colonial world’ is also a depiction of an Indigenous one. In this project, we sought to bring these worlds back together after two centuries of separation and misunderstanding.</p>
 <h2>How the kinetic map was made</h2>
-<p>We wanted to be able to show not only the 'strata' of information which accreted in maps of North America over time but also how those maps represented the juxtaposition of Native and colonial presence. No apposite database existed for this, so our major task was to build one. To do this we selected a range of historic maps that, to us, reflected our interest in the common worlds; these were geo-rectified over a base map and then data points were selected and recorded.</p>
+<p>We wanted to be able to show not only the 'strata' of information which accreted in maps of North America over time but also how those maps represented the juxtaposition of Native and colonial presence. No apposite database existed for this, so our major task was to build one. To do this we selected a range of historic maps that, to us, reflected our interest in the common worlds; these were geo-rectified over a base map and then data points were selected and recorded. These data points included settlements and placenames, both Indigenous and European, as well as rivers and land pathways. A consistent feature of these early maps is that Indigenous homelands are represented by printed words and phrases but their physical extents are not demarcated by printed boundary lines as the colonial states are. This is starkly illustrated in te image below (an excerpt from XXXX). Numerous words and phrases indicate areas associated with particular peoples and Native Nations: &quot;Senekas&quot;; &quot;Onondages&quot;. In the absence of printed boundaries we captured the mapmakers' understandings of the relative locations of Native nations and peoples by recording the position and extent of the associated text segments on the map. It is important to realise, then, that when our map displays a polygon with the associated text &quot;Senekas&quot; this polygon is not delimiting a geographical area but rather the position and alignment of a printed word on the map.</p>
+<h2>Using the kinetic map</h2>
+<p>There are two ways to interact with the <em>Movement and Common Worlds</em> map application. The first is through the Stories. Start at the 'Overview' and simply scroll downwards slowly. The map display changes to complement the accompanying text and images.,</p>
 <h2>The Project Team</h2>
 <p>Charles Prior (project lead, author of map stories); Dr Matthias Wong (PDRA - data mining); Jenson Morse (Project Intern); King’s Digital Lab (Paul Caton, Neil Jakeman, Elliot Hall, Tiffany Ong, Lucie Hao); Project review held at RAI with input from panel: Max Edelson, Chad Anderson, Hayden Haynes (Seneca Nation), Saliha Belmessous, Cassie Wise, Miriam Davis Rosenbaum (National Indian Education Association).</p>
 
