--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-04-29 20:49 -->
+    <!-- Built with 11ty - 2024-05-01 13:35 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1714423759">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1714570541">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1714423759"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1714570541"></script>
     
     <style>
     .map-label {
@@ -540,7 +540,7 @@
 <script defer type="text/javascript" src="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.js"></script>
 <script defer type="text/javascript" src="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/leaflet-dvf.js"></script>
 <script defer type="text/javascript" src="/bcc-11ty/assets/js/leaflet/plugins/leaflet.textpath.js"></script>
-<script defer type="text/javascript" src="/bcc-11ty/assets/js/leaflet/plugins/leaflet-polygon.fillPattern.js"></script>
+<script defer type="text/javascript" src="/bcc-11ty/assets/js/leaflet/plugins/leaflet-polygon.fillPattern-canvas.js"></script>
 <script defer type="text/javascript" src="/bcc-11ty/assets/node_modules/d3/dist/d3.min.js"></script>
 
 <script>
