--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-05-01 13:35 -->
+    <!-- Built with 11ty - 2024-05-02 18:46 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1714570541">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1714675569">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1714570541"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1714675569"></script>
     
     <style>
     .map-label {
@@ -97,6 +97,11 @@
         #filterContainer {
             display: block; /* Initially visible */
         }
+
+        .filterDisabled{
+            pointer-events: none;
+            opacity: 0.2;
+        }
     </style>
 </head>
 <body>
@@ -113,7 +118,8 @@
             <li><a class="overviewLink" href="#s-3" data-slideId="600">3<span>Pathways</span></a></li>
             <li><a class="overviewLink" href="#s-4" data-slideId="700">4<span>Villagers, Settlers</span></a></li>
             <li><a class="overviewLink" href="#s-5" data-slideId="900">5<span>Lines</span></a></li>
-            <li><a class="overviewLink" href="#filters">Explore </a></li>
+            <!--  -->
+            <li><a class="overviewLink" href="#filters" data-slideId="1000" >Explore </a></li>
         </ol>
     </nav>
 
@@ -317,25 +323,39 @@
 <div class="article_spacer">&nbsp;</div>
     </section>
 
-    <section id="filters">
-        <article class="storyTitle mapSlide">
+      <section id="filters" class="sectionContainer" >
+        <div class="storyTitleSpacerAbove" id="s5-start"></div>
+        <article class="storyTitle mapSlide" id="slide_1000" data-slideId="1000">
             <h2>Explore</h2>
-        </article>
-        <article>
-            <p>Customize your search using the filters below.
+             <p>Customize your search using the filters below.
                 Choose the map images or feature icons to enable the filters you require.
             </p>
         </article>
-         <div class="storyTitleSpacerBelow"></div>
-         <div class="storyTitleSpacerBelow"></div>
+
+        <div class="article_spacer">&nbsp;</div>
          <div class="storyTitleSpacerBelow"></div>
 
     </section>
+    <!--
+     <div class="storyTitleSpacerBelow"></div>
+         <div class="storyTitleSpacerBelow"></div>
+
+    <section id="filters" class="sectionContainer">
+        <article class="storyTitle mapSlide" id="slide_1000" data-slideId="1000">
+            <h2>Explore</h2>
+        </article>
+
+         <div class="storyTitleSpacerBelow"></div>
+         <div class="storyTitleSpacerBelow"></div>
+         <div class="storyTitleSpacerBelow"></div>
+    </section>-->
+
+
 </div>
 
     <div id="filter-wrapper">
         <input type="checkbox" id="filter">
-        <label aria-label="filter list" class="filter-button" for="filter">
+        <label aria-label="filter list" id="filter-button" class="filter-button" for="filter">
           <h2>Filter</h2>
         </label>
 
@@ -452,7 +472,7 @@
                 </ol>
             </section>
 
-            <section>
+            <section id="mapFilters" class="filterDisabled">
                 <header><h3>Features <em><span id="totalExploreFiltersApplied">0</span>/6 Selected</em></h3>
                 <span><input type="checkbox" id="selectallFeatures" name="selectall" value="All">
                 <label for="selectallFeatures">Select All</label></span>
