deploy: 4efda85a7b12ee8144f600301fdc3e401ff39e44

--- a/stories/homelands/index.html
+++ b/stories/homelands/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-05-07 06:12 -->
+    <!-- Built with 11ty - 2024-05-07 06:28 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>BCC | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1715062356">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1715063291">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1715062356"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1715063291"></script>
     
     <style>
     .map-label {
@@ -89,7 +89,7 @@
 <p>The sacred ties between land and people were recited in the Ohén:ton Karihwatéhkwen, the ‘words that come before all else’ that give thanks to the earth, waters, animals, plants, winds, the sun and stars. The maps shown here contained this environment, and the words of this address were an account of the relationship between peoples and the ecosystems that supported them.</p>
 </article>
 <div class="article_spacer">&nbsp;</div><article class="mapSlide" id="slide_7" data-slideId="7"><p><strong><em>Our Ancestors came out of this very Ground, and their Children have remained here ever since.</em></strong></p>
-<p>The land was political. Haudenosaunee oral tradition drew the land and its history together in multiple versions of the story of the formation of the Great League of Peace, and where Deganawidah taught Hiawatha the rituals of the condolence ceremony. As the Onondaga diplomat Canasatego declared at a treaty council in 1744, ‘our Ancestors came out of this very Ground, and their Children have remained here ever since’.</p>
+<p>The land was political. Haudenosaunee oral tradition drew the land and its history together in multiple versions of the story of the formation of the Great League of Peace, and where Deganawidah – born near what is now the Bay of Quinte in eastern Ontario - taught Hiawatha the rituals of the Condolence Ceremony. As the Onondaga diplomat Canasatego declared at a treaty council in 1744, ‘our Ancestors came out of this very Ground, and their Children have remained here ever since’.​</p>
 </article>
 <div class="article_spacer">&nbsp;</div><article class="mapSlide" id="slide_8" data-slideId="8"><p>Indigenous peoples were map-makers, but these maps were carried in the mind and then sketched with charcoal on hide or bark, or drawn with a stick in soft soil or the ashes of a fire. Colonial officials copied these maps, which allow us to glimpse the ways in which Indigenous nations saw themselves in relation to other peoples. The famous Catawba deerskin map portrayed two contrasting ways of being on the land: the villages and towns of the Catawba are represented as a network of circles connected by paths, while the British colonial city of Charlestown is shown as a grid system of streets. The relative size of circles (a sacred shape in Indigenous culture) denotes the importance and power of each nation; the paths linking them represent connections of kinship, trade and alliance.</p>
 <p><img src="../assets/img/stories/7-Catawba-deerskin-map.jpg" alt="Catawba deerskin map"></p>
