--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-05-17 08:58 -->
+    <!-- Built with 11ty - 2024-05-17 10:21 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1715936316">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1715941291">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1715936316"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1715941291"></script>
     
     <style>
     .map-label {
@@ -362,7 +362,7 @@
         <div class="content">
             <p>Click maps to show features. Use feature list to choose features displayed. Select or deselect all if needed.</p>
 
-            <section>
+            <section id="mapFilters">
                 <header><h3>Maps <em><span id="totalMapFiltersApplied">0</span>/16 Selected</em></h3>
                 <span><input type="checkbox" id="selectallMaps" name="selectall" value="All">
                 <label for="selectallMaps">Select All</label></span>
@@ -472,7 +472,7 @@
                 </ol>
             </section>
 
-            <section id="mapFilters" class="filterDisabled">
+            <section id="featureFilters" class="filterDisabled">
                 <header><h3>Features <em><span id="totalExploreFiltersApplied">0</span>/6 Selected</em></h3>
                 <span><input type="checkbox" id="selectallFeatures" name="selectall" value="All">
                 <label for="selectallFeatures">Select All</label></span>
