deploy: 7ac8b2f9fed3e34ba63bd6f4193dfaa7f795458e

--- a/accessibility/index.html
+++ b/accessibility/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-07-08 12:25 -->
+    <!-- Built with 11ty - 2024-07-08 12:39 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Accessibility Statement for Brightening the Covenant Chain | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1720441521">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1720442342">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1720441521"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1720442342"></script>
 
     <style>
 
@@ -191,12 +191,12 @@ This page is based on the <a href="https://www.gov.uk/government/publications/sa
 <footer class="footer">
     <hr/>
     <div class="w3-row has-text-centered w3-padding-small flex-container">
-        <div class="">
+        <div class="logo">
             <h4>Partners and Funders</h4>
         </div>
-        <div class="logo">
+        <div class="logo kcl-logo">
             <a href="//kdl.kcl.ac.uk/">
-                <picture><source type="image/webp" srcset="/assets/img/nk1khL1P44-197.webp 197w" sizes="(min-width: 10em), 10vw"><img alt="King's College London logo" loading="lazy" decoding="async" src="/assets/img/nk1khL1P44-197.jpeg" width="197" height="150"></picture>
+                <picture><source type="image/webp" srcset="/assets/img/nk1khL1P44-197.webp 197w" sizes="300, 600"><img alt="King's College London logo" loading="lazy" decoding="async" src="/assets/img/nk1khL1P44-197.jpeg" width="197" height="150"></picture>
             </a>
         </div>
 
@@ -212,7 +212,7 @@ This page is based on the <a href="https://www.gov.uk/government/publications/sa
             </a>
         </div>
 
-        <div class="">
+        <div class="footer-credits">
             ©2024 Brightening the Covenant Chain<br/>
             <a href="/accessibility">Accessibility Statement</a><br/>
             <a href="/acknowledgements">Credits &amp; Acknowledgements</a>
