deploy: 1bb160d0f09efda1c15335427ce80a5b998ef0bc

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-08-07 07:33 -->
+    <!-- Built with 11ty - 2024-08-07 08:04 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1723016027">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1723017884">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1723016027"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1723017884"></script>
 
     <style>
 
@@ -367,7 +367,7 @@
             needed.</p>
 
         <section id="mapFilters">
-            <header><h3>Maps <em><span id="totalMapFiltersApplied">0</span>/16 Selected</em></h3>
+            <header><h3>Maps <em><span id="totalMapFiltersApplied">0</span>/15 Selected</em></h3>
                 <span><input type="checkbox" id="selectallMaps" name="selectall" value="All">
                 <label for="selectallMaps">Select All</label></span>
             </header>
@@ -406,12 +406,6 @@
                            class="map_selector" id="mapcheckbox8"/>
                     <label for="mapcheckbox8">
                         <img src="../assets/img/map-thumbs/1752-Evans.jpg" alt=""><span>1752 <em>Evans</em></span>
-                    </label>
-                </li>
-                <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="10"
-                           class="map_selector" id="mapcheckbox9"/>
-                    <label for="mapcheckbox9">
-                        <img src="../assets/img/map-thumbs/1755-Herbert.jpg" alt=""><span>1755 <em>Herbert</em></span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="11"
@@ -518,11 +512,11 @@
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
-                           data-filtervalue='{"sub_type":13, "identity":[0]}'
+                           data-filtervalue='{"sub_type":8, "identity":[0]}'
                            class="explore_filter" id="checkbox5"/>
                     <label for="checkbox5">
                         <img
-                                src="https://static.thenounproject.com/png/2615726-200.png" alt=""/><span>Principal Rivers</span>
+                                src="https://static.thenounproject.com/png/2615726-200.png" alt=""/><span>Rivers</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
@@ -644,6 +638,7 @@
 
 </body>
 </html>
+
 <footer class="footer">
     <hr/>
     <div class="w3-row has-text-centered w3-padding-small flex-container">
