--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-08-09 11:55 -->
+    <!-- Built with 11ty - 2024-08-09 14:57 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Treatied Spaces | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1723204534">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1723215471">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1723204534"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1723215471"></script>
 
     <style>
 
@@ -131,7 +131,7 @@
 
             <div class="w3-col s6 m4 l3 quicklink quicklink-spacer">
                 <div class="quicklink-text">
-                    Select a historical map source and choose what features to display.
+                    Select historical map sources and choose what features to display.
                 </div>
                 <div class="info-button"><a href="stories/#s6-end">Explore</a></div>
             </div>
@@ -146,6 +146,7 @@
 
         </div>
 </section>
+
 <footer class="footer">
     <hr/>
     <div class="w3-row has-text-centered w3-padding-small flex-container">
