deploy: b45dd6ca21b9f11a86c6f6fd6f345d247dc9bd35

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-08-14 11:22 -->
+    <!-- Built with 11ty - 2024-08-14 12:12 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1723634575">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1723637550">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1723634575"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1723637550"></script>
 
     <style>
 
@@ -544,6 +544,7 @@
         <h2>Legend</h2>
     </label>
     <div class="content">
+		<!--
         <ol>
             <li>Placenames (Indigenous)</li>
             <li>Placenames (European)</li>
@@ -560,6 +561,16 @@
             <li>Pathways and Lines</li>
             <li>Council Fires</li>
         </ol>
+		-->
+        <ul>
+            <li><img style="height: 1em;" src="/assets/img/stories/cross_purple.webp"></img>&nbsp;Placenames (Indigenous)</li>
+            <li><img style="height: 1em;" src="/assets/img/stories/cross_turquoise.webp"></img>&nbsp;Placenames (European)</li>
+            <li><img style="height: 1em;" src="/assets/img/stories/circle_purple.webp"></img>&nbsp;Settlements (Indigenous)</li>
+            <li><img style="height: 1em;" src="/assets/img/stories/circle_turquoise.webp"></img>&nbsp;Settlements (European)</li>
+            <li><img style="height: 1em;" src="/assets/img/stories/principal_rivers.webp"></img>&nbsp;Principal Rivers</li>
+            <li><img style="height: 1em;" src="/assets/img/stories/pathways.webp"></img>&nbsp;Pathways and Lines</li>
+            <li><img style="height: 1em;" src="/assets/img/stories/council-fire.webp"></img>&nbsp;Council Fires</li>
+        </ul>		
     </div>
 </div>
 
