--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-08-14 12:12 -->
+    <!-- Built with 11ty - 2024-08-14 16:30 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1723637550">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1723653036">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1723637550"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1723653036"></script>
 
     <style>
 
@@ -563,12 +563,17 @@
         </ol>
 		-->
         <ul>
-            <li><img style="height: 1em;" src="/assets/img/stories/cross_purple.webp"></img>&nbsp;Placenames (Indigenous)</li>
-            <li><img style="height: 1em;" src="/assets/img/stories/cross_turquoise.webp"></img>&nbsp;Placenames (European)</li>
-            <li><img style="height: 1em;" src="/assets/img/stories/circle_purple.webp"></img>&nbsp;Settlements (Indigenous)</li>
-            <li><img style="height: 1em;" src="/assets/img/stories/circle_turquoise.webp"></img>&nbsp;Settlements (European)</li>
+            <li><img style="height: 1em;opacity:0.3;" src="/assets/img/stories/region_turquoise.webp"></img>&nbsp;Indigenous region</li>
+            <li><img style="height: 1em;" src="/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp"></img>&nbsp;Haudenosaunee region</li>
+            <li><img style="height: 1em;opacity:0.3" src="/assets/img/stories/region_purple.webp"></img>&nbsp;Domain (European)</li>		
+            <li><img style="height: 1em;" src="/assets/img/stories/diagonal_hatching_purple.webp"></img>&nbsp;Annotation (European)</li>			
+            <li><img style="height: 1em;" src="/assets/img/stories/cross_turquosie.webp"></img>&nbsp;Placenames (Indigenous)</li>
+            <li><img style="height: 1em;" src="/assets/img/stories/cross_purple.webp"></img>&nbsp;Placenames (European)</li>
+            <li><img style="height: 1em;" src="/assets/img/stories/circle_turquoise.webp"></img>&nbsp;Settlements (Indigenous)</li>
+            <li><img style="height: 1em;" src="/assets/img/stories/circle_purple.webp"></img>&nbsp;Settlements (European)</li>
             <li><img style="height: 1em;" src="/assets/img/stories/principal_rivers.webp"></img>&nbsp;Principal Rivers</li>
             <li><img style="height: 1em;" src="/assets/img/stories/pathways.webp"></img>&nbsp;Pathways and Lines</li>
+            <li><img style="height: 1em;" src="/assets/img/stories/boundary.webp"></img>&nbsp;Boundary</li>			
             <li><img style="height: 1em;" src="/assets/img/stories/council-fire.webp"></img>&nbsp;Council Fires</li>
         </ul>		
     </div>
