deploy: 1530657c22f31358f736faf2dda7223d9c182f6b

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-08-14 16:34 -->
+    <!-- Built with 11ty - 2024-08-16 15:11 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1723653261">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1723821107">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1723653261"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1723821107"></script>
 
     <style>
 
@@ -562,6 +562,7 @@
             <li>Council Fires</li>
         </ol>
 		-->
+<! --
         <ul>
             <li><img style="height: 1em;opacity:0.3;" src="/assets/img/stories/region_turquoise.webp"></img>&nbsp;Indigenous region</li>
             <li><img style="height: 1em;" src="/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp"></img>&nbsp;Haudenosaunee region</li>
@@ -575,7 +576,52 @@
             <li><img style="height: 1em;" src="/assets/img/stories/pathways.webp"></img>&nbsp;Pathways and Lines</li>
             <li><img style="height: 1em;" src="/assets/img/stories/boundary.webp"></img>&nbsp;Boundary</li>			
             <li><img style="height: 1em;" src="/assets/img/stories/council-fire.webp"></img>&nbsp;Council Fires</li>
-        </ul>		
+        </ul>		-->
+
+<table>
+  <tr>
+    <td><img style="height: 1em;opacity:0.3;" src="/assets/img/stories/region_turquoise.webp"></img></td>
+    <td>Indigenous region</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp"></img></td>
+    <td>Haudenosaunee region</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;opacity:0.3" src="/assets/img/stories/region_purple.webp"></img></td>
+    <td>Domain (European)</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="/assets/img/stories/diagonal_hatching_purple.webp"></img></td>
+    <td>Annotation (European)</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="/assets/img/stories/cross_turquoise.webp"></img></td>
+    <td>Placenames (Indigenous)</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="/assets/img/stories/cross_purple.webp"></img></td>
+    <td>Placenames (European)</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="/assets/img/stories/circle_turquoise.webp"></img></td>
+    <td>Settlements (Indigenous)</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
+
+
     </div>
 </div>
 
