--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-08-16 15:11 -->
+    <!-- Built with 11ty - 2024-08-16 15:31 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1723821107">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1723822310">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1723821107"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1723822310"></script>
 
     <style>
 
@@ -544,80 +544,55 @@
         <h2>Legend</h2>
     </label>
     <div class="content">
-		<!--
-        <ol>
-            <li>Placenames (Indigenous)</li>
-            <li>Placenames (European)</li>
-            <li>Settlements (Indigenous)</li>
-            <li>Settlements (European)</li>
-            <li>Principal Rivers</li>
-            <li>Pathways and Lines</li>
-            <li>Council Fires</li>
-            <li>Placenames (Indigenous)</li>
-            <li>Placenames (European)</li>
-            <li>Settlements (Indigenous)</li>
-            <li>Settlements (European)</li>
-            <li>Principal Rivers</li>
-            <li>Pathways and Lines</li>
-            <li>Council Fires</li>
-        </ol>
-		-->
-<! --
-        <ul>
-            <li><img style="height: 1em;opacity:0.3;" src="/assets/img/stories/region_turquoise.webp"></img>&nbsp;Indigenous region</li>
-            <li><img style="height: 1em;" src="/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp"></img>&nbsp;Haudenosaunee region</li>
-            <li><img style="height: 1em;opacity:0.3" src="/assets/img/stories/region_purple.webp"></img>&nbsp;Domain (European)</li>		
-            <li><img style="height: 1em;" src="/assets/img/stories/diagonal_hatching_purple.webp"></img>&nbsp;Annotation (European)</li>			
-            <li><img style="height: 1em;" src="/assets/img/stories/cross_turquoise.webp"></img>&nbsp;Placenames (Indigenous)</li>
-            <li><img style="height: 1em;" src="/assets/img/stories/cross_purple.webp"></img>&nbsp;Placenames (European)</li>
-            <li><img style="height: 1em;" src="/assets/img/stories/circle_turquoise.webp"></img>&nbsp;Settlements (Indigenous)</li>
-            <li><img style="height: 1em;" src="/assets/img/stories/circle_purple.webp"></img>&nbsp;Settlements (European)</li>
-            <li><img style="height: 1em;" src="/assets/img/stories/principal_rivers.webp"></img>&nbsp;Principal Rivers</li>
-            <li><img style="height: 1em;" src="/assets/img/stories/pathways.webp"></img>&nbsp;Pathways and Lines</li>
-            <li><img style="height: 1em;" src="/assets/img/stories/boundary.webp"></img>&nbsp;Boundary</li>			
-            <li><img style="height: 1em;" src="/assets/img/stories/council-fire.webp"></img>&nbsp;Council Fires</li>
-        </ul>		-->
 
 <table>
   <tr>
-    <td><img style="height: 1em;opacity:0.3;" src="/assets/img/stories/region_turquoise.webp"></img></td>
-    <td>Indigenous region</td>
+    <td><img style="height: 1em;" src="/assets/img/stories/circle_turquoise.webp"></img></td>
+    <td>Settlement (Indigenous)</td>
   </tr>
   <tr>
-    <td><img style="height: 1em;" src="/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp"></img></td>
-    <td>Haudenosaunee region</td>
-  </tr>
-  <tr>
-    <td><img style="height: 1em;opacity:0.3" src="/assets/img/stories/region_purple.webp"></img></td>
-    <td>Domain (European)</td>
-  </tr>
-  <tr>
-    <td><img style="height: 1em;" src="/assets/img/stories/diagonal_hatching_purple.webp"></img></td>
-    <td>Annotation (European)</td>
+    <td><img style="height: 1em;" src="/assets/img/stories/circle_purple.webp"></img></td>
+    <td>Settlement (European)</td>
   </tr>
   <tr>
     <td><img style="height: 1em;" src="/assets/img/stories/cross_turquoise.webp"></img></td>
-    <td>Placenames (Indigenous)</td>
+    <td>Placename (Indigenous)</td>
   </tr>
   <tr>
     <td><img style="height: 1em;" src="/assets/img/stories/cross_purple.webp"></img></td>
-    <td>Placenames (European)</td>
+    <td>Placename (European)</td>
   </tr>
   <tr>
-    <td><img style="height: 1em;" src="/assets/img/stories/circle_turquoise.webp"></img></td>
-    <td>Settlements (Indigenous)</td>
+    <td><img style="height: 1em;opacity:0.3;" src="/assets/img/stories/region_turquoise.webp"></img></td>
+    <td>Annotation (Indigenous-related)</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
+    <td><img style="height: 1em;" src="/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp"></img></td>
+    <td>Annotation (Haudenosaunee-related)</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
+    <td><img style="height: 1em;" src="/assets/img/stories/diagonal_hatching_purple.webp"></img></td>
+    <td>Annotation (European-related)</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
+    <td><img style="height: 1em;opacity:0.3" src="/assets/img/stories/region_purple.webp"></img></td>
+    <td>Colonial domain</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="/assets/img/stories/principal_rivers.webp"></img></td>
+    <td>River</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="/assets/img/stories/pathways.webp"></img></td>
+    <td>Pathway</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="/assets/img/stories/boundary.webp"></img></td>
+    <td>Boundary</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="/assets/img/stories/council-fire.webp"></img></td>
+    <td>Council fire</td>
   </tr>
 </table>
 
