deploy: cd5f24772eedd646cc03911dbae100381f317e20

--- a/resources/index.html
+++ b/resources/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-08-27 08:05 -->
+    <!-- Built with 11ty - 2024-08-27 10:03 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Resources | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1724745957">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1724753030">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1724745957"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1724753030"></script>
 
     <style>
 
@@ -107,7 +107,30 @@
                 Resources
             </h1>
             <div class="content ">
-                <h2>Resources here!</h2>
+                <h2>Reading</h2>
+<p>Chad L. Anderson, <em>The Storied Landscape of Iroquoia: History, Conquest and Memory in the Native Northeast</em> (University of Nebraska Press, 2020).</p>
+<p>Lisa Brooks, ‘Awikhigawôgan ta Pildowi Ôjmowôgan: Mapping a New History’. <em>The William and Mary Quarterly</em>, v. 75 n. 2 (2018), 259-94.</p>
+<p>Max Edelson, <em>The New Map of Empire: How Britain Imagined America Before Independence</em> (Harvard University Press, 2017).</p>
+<p><em>Digital Mapping and Indigenous America</em>, ed. Janet Berry Hess (New York: Routledge, 2021).</p>
+<p><em>Cartographic Encounters: Perspectives on Native American Map-Making and Map Use</em>, ed. G. Malcolm Lewis (University of Chicago Press, 1998).</p>
+<p>G. Malcolm Lewis, ‘Maps, Mapmaking, and Map Use by Native North Americans’, in <em>The History of Cartography</em>, Vol. 2, Bk. 3 – <em>Cartography in the Traditional African, American, Artic, Australian, and Pacific Societies</em>, ed. David Woodward &amp; G. Malcolm Lewis (University of Chicago Press, 1998), 51-182.</p>
+<p>Jon Parmenter, <em>The Edge of the Woods: Iroquoia, 1534-1701</em> (Michigan State University Press, 2010).</p>
+<p>Paul W. Mapp, <em>The Elusive West and the Contest for Empire, 1713-1763</em> (University of North Carolina Press, 2011).</p>
+<p>Mark Warhus, <em>Another America: Native American Maps and the History of Our Land</em> (New York: St. Martin’s Press, 1997).</p>
+<h2>Treaties</h2>
+<p><a href="https://treaties.okstate.edu/">Tribal Treaties Database</a></p>
+<p><a href="https://www.nationalarchives.gov.uk/education/resources/native-north-americans/">Native North Americans - The National Archives</a></p>
+<p><a href="https://www.archives.gov/research/native-americans/treaties">American Indian Treaties | National Archives</a></p>
+<p><a href="https://www.loc.gov/collections/century-of-lawmaking/articles-and-essays/century-presentations/indian-land-cessions/">Indian Land Cessions: U.S. Congressional Documents</a></p>
+<p><a href="https://www.loc.gov/item/05019329/">Statistical atlas of the United States based on the results of the ninth census 1870 with contributions from many eminent men of science and several departments of the government | Library of Congress</a></p>
+<p><a href="https://www.loc.gov/item/a40001834/">Scribner's statistical atlas of the United States, showing by graphic methods their present condition and their political, social and industrial development | Library of Congress</a></p>
+<h2>Cognate Projects</h2>
+<p><a href="https://native-land.ca/">Native Land CA</a></p>
+<p><a href="https://usg.maps.arcgis.com/apps/webappviewer/index.html?id=eb6ca76e008543a89349ff2517db47e6">Invasion of America</a></p>
+<p><a href="https://dsl.richmond.edu/panorama/">American Panorama</a></p>
+<p><a href="https://gossamernetwork.com/">Gossamer Network</a></p>
+<p><a href="https://ourbelovedkin.com/awikhigan/index">Our Beloved Kin</a></p>
+<p></p>
 
             </div>
 
